--- a/JavaScript/game.html
+++ b/JavaScript/game.html
@@ -4,25 +4,30 @@
 </head>
 
 <style>
+.style1 {
+        background: url(background.png) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
 </style>
-
+    
 <body>
+<div style="top:0px;left:0px;position:absolute;"><img id="background" src="pic/background.png" /></div>
+<div style="top:100px;left:554px;position:absolute;"><img id="card1" src="pic/reverse.png" /></div>
+<div style="top:450px;left:554px;position:absolute;"><img id="card2" src="pic/reverse.png"/></div>
+<div style="top:250px;left:515px;position:absolute;"><img id="pic1" src="pic/pic1.png"/></div>
+<div style="top:325px;left:425px;position:absolute;"><button type="button" id = "button1" onclick = "big()"><img src="pic/pic2.png"></button></div>
+<div style="top:325px;left:575px;position:absolute;"><button type="button" id = "button2" onclick = "small()"><img src="pic/pic3.png"></button></div>
+<div style="top:258px;left:505px;position:absolute;"><img id="win" src="pic/win.png"/></div>
+<div style="top:258px;left:505px;position:absolute;"><img id="lose" src="pic/lose.png"/></div>
+<div style="top:330px;left:495px;position:absolute;"><button type="button" id = "restart" onclick = "init()"><img src="pic/restart.png"/></div>
 
-<div style="top:20px;left:550px;position:absolute;">Banker</div>
-<div style="top:50px;left:550px;position:absolute;"><img id="card1" src="pic/reverse.png" /></div>
-<div style="top:500px;left:550px;position:absolute;"><img id="card2" src="pic/reverse.png"/></div>
-<div style="top:600px;left:550px;position:absolute;">Player</div>
-<div style="top:200px;left:550px;position:absolute;"><img id="pic1" src="pic/pic1.png"/></div>
-<div style="top:300px;left:450px;position:absolute;"><button type="button" id = "button1" onclick = "big()"><img src="pic/pic2.png"></button></div>
-<div style="top:300px;left:650px;position:absolute;"><button type="button" id = "button2" onclick = "small()"><img src="pic/pic3.png"></button></div>
-<div style="top:300px;left:550px;position:absolute;"><img id="win" src="pic/win.png"/></div>
-<div style="top:300px;left:550px;position:absolute;"><img id="lose" src="pic/lose.png"/></div>
-<div style="top:400px;left:550px;position:absolute;"><button type="button" id = "restart" onclick = "init()"><img src="pic/restart.png"/></div>
-<div style="top:500px;left:650px;position:absolute;">your money :</div>
-<div style="top:530px;left:650px;position:absolute;">your bet :</div>
 
 <script language="JavaScript"
 src = "game.js">
-</script>
+</script>
+
 </body>
 </html>
