新增背景音樂

--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -8,6 +8,8 @@
 
 	<body>
 
+		<embed src="music\Bumper_Tag.mp3" autostart=true hidden=true>
+	
 		<div style="top:20px;left:550px;position:absolute;">Banker</div>
 		<div style="top:50px;left:550px;position:absolute;"><img id="card1" src="pic/reverse.png" /></div>
 		
