--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -34,7 +34,7 @@
 		<div style="top:120px;left:20px;position:absolute;visibility:hidden;"><img id="win" src="pic/win.png"/></div>
 		<div style="top:220px;left:20px;position:absolute;visibility:hidden;"><img id="lose" src="pic/lose.png"/></div>
 		
-		<div style="top:400px;left:550px;position:absolute;"><button type="button" id = "button_restart" onclick = "init()"><img src="pic/restart.png"/></div>
+		<div style="top:400px;left:550px;position:absolute;"><button type="button" id = "button_start" onclick = "init()"><img src="pic/start.png"/></div>
 		
 		<div style="top:500px;left:650px;position:absolute;">your money :</div>
 		<div style="top:500px;left:750px;position:absolute;" id = "money"></div>
