聲音先暫時註解

--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -8,7 +8,7 @@
 
 	<body>
 
-		<embed src="music\Bumper_Tag.mp3" autostart=true hidden=true>
+		<!--<embed src="music\Bumper_Tag.mp3" autostart=true hidden=true>-->
 		<div style="top:0px;left:0px;position:absolute;"><img id="background" src="pic/background.png" /></div>
 		
 		<div style="top:100px;left:554px;position:absolute;"><img id="card1" src="pic/reverse.png" /></div>
