--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -17,22 +17,25 @@
 		
 		
 		<form style="top:450px;left:20px;position:absolute;visibility:hidden;" id="frm1" action="form_action.asp">
-		  <img id = "button_confirm" src="pic/start.png"/><br><br>
 		  <input type="number" name="bet"><br><br>
-		  <button type="button" onclick="conf()" id = "button_confirm" ><img src="pic/confirm.png"></button>
+		  <button type="button" id = "button_confirm" ><img src="pic/confirm.png"></button>
 		</form>
 		
 		<div style="top:325px;left:425px;position:absolute;visibility:hidden;">
-			<button type="button" id = "button_big" onclick = "big()"><img src="pic/big.png"></button>
+			<button type="button" id = "button_big"><img src="pic/big.png"></button>
 		</div>
 		<div style="top:325px;left:575px;position:absolute;visibility:hidden;">
-			<button type="button" id = "button_small" onclick = "small()"><img src="pic/small.png"></button>
+			<button type="button" id = "button_small"><img src="pic/small.png"></button>
+		</div>
+		
+		<div style="top:325px;left:495px;position:absolute;">
+			<button type="button" id = "button_start"><img src="pic/start.png"></button>
 		</div>
 		
 		<div style="top:250px;left:515px;position:absolute;"><img id="Comparison" src="pic/Comparison.png"/></div>
 		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="win" src="pic/win.png"/></div>
-		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="lose" src="pic/lose.png"/></div>
-		<div style="top:325px;left:495px;position:absolute;"><button type="button" id = "button_restart" onclick = "init()"><img src="pic/restart.png"/></div>
+		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="lose" src="pic/lose.png"/></div>		
+
 		<div style="top:495px;left:900px;position:absolute;" id = "money"><style="font-family:cursive;"><style="font-size:18px;"></div>
 		<div style="top:550px;left:850px;position:absolute;" id = "bet"><style="font-family:cursive;"><style="font-size:18px;"></div>
 
