--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -36,8 +36,9 @@
 		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="win" src="pic/win.png"/></div>
 		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="lose" src="pic/lose.png"/></div>		
 
-		<div style="top:495px;left:900px;position:absolute;" id = "money"><style="font-family:cursive;"><style="font-size:18px;"></div>
-		<div style="top:550px;left:850px;position:absolute;" id = "bet"><style="font-family:cursive;"><style="font-size:18px;"></div>
+		<div style="top:495px;left:900px;position:absolute;" id = "bankerMoney"><style="font-family:cursive;"><style="font-size:18px;"></div>
+		<div style="top:550px;left:900px;position:absolute;" id = "yourMoney"><style="font-family:cursive;"><style="font-size:18px;"></div>
+		<div style="top:605px;left:850px;position:absolute;" id = "bet"><style="font-family:cursive;"><style="font-size:18px;"></div>
 
 		<script language="JavaScript" src = "main.js"></script>
 
