--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -17,6 +17,7 @@
 		
 		
 		<form style="top:450px;left:20px;position:absolute;visibility:hidden;" id="frm1" action="form_action.asp">
+		  <img id = "button_confirm" src="pic/enter.png"/><br><br>
 		  <input type="number" name="bet"><br><br>
 		  <button type="button" id = "button_confirm" ><img src="pic/confirm.png"></button>
 		</form>
