--- a/SecondDemo(new)/game.html
+++ b/SecondDemo(new)/game.html
@@ -17,7 +17,7 @@
 		
 		
 		<form style="top:495px;left:150px;position:absolute;visibility:hidden;" id="frm1" action="form_action.asp">
-		  <img id = "button_confirm" src="pic/enter.png"/><br><br>
+		  <img src="pic/enter.png"/><br><br>
 		  <input type="number" name="bet"><br><br>
 		  <button type="button" id = "button_confirm" ><img src="pic/confirm.png"></button>
 		</form>
@@ -33,7 +33,7 @@
 			<button type="button" id = "button_start"><img src="pic/start.png"></button>
 		</div>
 		
-		<div style="top:250px;left:515px;position:absolute;"><img id="Comparison" src="pic/Comparison.png"/></div>
+		<div style="top:250px;left:515px;position:absolute;"><img id="comparison" src="pic/comparison.png"/></div>
 		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="win" src="pic/win.png"/></div>
 		<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="lose" src="pic/lose.png"/></div>		
 
