調整圖片、簡報位置

--- a/FinalDemo/網頁/index.html
+++ b/FinalDemo/網頁/index.html
@@ -93,27 +93,27 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="images/profile/placeholder.gif" alt="" />
 								<h4>賴晨禾</h4>
 								<p>PM</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/profile_邱天.jpg" alt="" />
+								<img src="images/profile/邱天.jpg" alt="" />
 								<h4>邱天</h4>
 								<p>網頁製作師</p>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile_陳逸夫.jpg" alt="" />
+								<img src="images/profile/陳逸夫.jpg" alt="" />
 								<h4>陳逸夫</h4>
 								<p>圖型化介面設計</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/profile_彭麒家.jpg" alt="" />
+								<img src="images/profile/彭麒家.jpg" alt="" />
 								<h4>彭麒家</h4>
 								<p>前端圖形介面設計</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/profile_placeholder.gif" alt="" />
+								<img src="images/profile/鄭敬儒.jpg" alt="" />
 								<h4>鄭敬儒</h4>
 								<p>智能合約</p>
 							</section>
