--- a/FinalDemo/網頁/index.html
+++ b/FinalDemo/網頁/index.html
@@ -31,8 +31,8 @@
 					<ul>
 						<li><a href="index.html">首頁</a></li>
 						<li><a href="introduction.html">如何開始</a></li>
-						<li><a href="game1.html">比大小</a></li>
-						<li><a href="game2.html">吃角子老虎機</a></li>
+						<li><a href="CardGame.html">比大小</a></li>
+						<li><a href="SlotMachine.html">吃角子老虎機</a></li>
 						<li><a href="#" class="button special">註冊</a></li>
 					</ul>
 				</nav>
