--- a/FinalDemo/網頁/introduction.html
+++ b/FinalDemo/網頁/introduction.html
@@ -26,13 +26,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Transit</a></h1>
+				<h1><a href="index.html">賭場</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">首頁</a></li>
 						<li><a href="introduction.html">如何開始</a></li>
-						<li><a href="game1.html">比大小</a></li>
-						<li><a href="game2.html">吃角子老虎機</a></li>
+						<li><a href="CardGame.html">比大小</a></li>
+						<li><a href="SlotMachine.html">吃角子老虎機</a></li>
 						<li><a href="#" class="button special">註冊</a></li>
 					</ul>
 				</nav>
