--- a/FinalDemo/網頁/index_english.html
+++ b/FinalDemo/網頁/index_english.html
@@ -26,26 +26,26 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">賭場</a></h1>
+				<h1><a href="index.html">CASINO</a></h1>
 				<nav id="nav">
 					<ul>
                         <li><a href="index_english.html">English Home Page  </a></li>
-						<li><a href="index.html">首頁</a></li>
-						<li><a href="introduction.html">如何開始</a></li>
-						<li><a href="CardGame.html">比大小</a></li>
-						<li><a href="SlotMachine.html">吃角子老虎機</a></li>
-						<li><a href="#" class="button special">註冊</a></li>
+						<li><a href="index.html">Chinese Home Page</a></li>
+						<li><a href="introduction.html">How to Play</a></li>
+						<li><a href="CardGame.html">Compare_cards_point</a></li>
+						<li><a href="SlotMachine.html">Slot</a></li>
+						<li><a href="#" class="button special">Enroll</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>超級天天天賭場</h2>
-				<p>歡迎來到乙太幣智能合約賭場</p>
+				<h2>Super Sky Casino</h2>
+				<p>Welcome To Ethernet Smart Contract Casino</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">如何開始</a>
+						<a href="#" class="button big">How To Start Your Game</a>
 					</li>
 				</ul>
 			</section>
@@ -55,29 +55,29 @@
 			<section id="one" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>關於本網站</h2>
-						<p>查看我們的資訊和遊戲規則</p>
+						<h2>About this Website</h2>
+						<p>Look For Details for our developer and smart contracts</p>
 					</header>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color1 fa-info-circle"></i>
-								<h3>關於我們</h3>
-								<p>查看更多關於我們的資料，和取得智能合約等相關資訊。</p>
+								<h3>About Developer</h3>
+								<p>Look for details about developer and reference for smart contracts</p>
 							</section>
 						</div>
 						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color9 fa-dollar (alias)"></i>
-								<h3>吃角子老虎機</h3>
-								<p>刺激大冒險!拉一把決定你的人生，給你最新刺激感體驗!</p>
+								<h3>SLOT GAME</h3>
+								<p>Slot makes your life better</p>
 							</section>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color6 fa-university "></i>
-								<h3>比大小</h3>
-								<p>勝率就是1/2!機會命運等著你，想要一夜致富嗎?選我就對了!</p>
+								<h3>COMPARE CARDS POINT</h3>
+								<p>Want to be a Billionaire? Tra and Make A Wish</p>
 							</section>
 						</div>
 					</div>
@@ -88,41 +88,41 @@
 			<section id="two" class="wrapper style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>關於開發人員</h2>
-						<p>以下是本系統開發人員和工作分配</p>
+						<h2>About Developer</h2>
+						<p>Belows are project assignments</p>
 					</header>
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
 								<img src="images/profile/placeholder.gif" alt="" />
 								<h4>賴晨禾</h4>
-								<p>PM</p>
+								<p>Progect Manager</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/邱天.jpg" alt="" />
 								<h4>邱天</h4>
-								<p>網頁製作師</p>
+								<p>Website Developer</p>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
 								<img src="images/profile/陳逸夫.jpg" alt="" />
 								<h4>陳逸夫</h4>
-								<p>圖型化介面設計</p>
+								<p>Graphical Interface Developer</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/彭麒家.jpg" alt="" />
 								<h4>彭麒家</h4>
-								<p>前端圖形介面設計</p>
+								<p>Grapgical Interface Developer</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/鄭敬儒.jpg" alt="" />
 								<h4>鄭敬儒</h4>
-								<p>智能合約</p>
+								<p>Smart Contract Developer</p>
 							</section>
 
 						</div>
 					</section>
 					<footer>
-						<p>歡迎查閱我們的github<br>所有關於我們開發的程式碼都在上面</p>
+						<p>Look For Our Github<br>all of our codes are saved there</p>
 						<ul class="actions">
 							<li>
 								<a href="https://github.com/NCCU-Software-Engineering/Software-Engineering" target="_blank" class="button big">github</a>
@@ -136,25 +136,25 @@
 			<section id="three" class="wrapper style3 special">
 				<div class="container">
 					<header class="major">
-						<h2>回報問題和意見</h2>
-						<p>如果你對本網站有任何意見、問題或是發現BUG</p>
+						<h2>reply your comments</h2>
+						<p>if you have any recommendation on our project</p>
 					</header>
 				</div>
 				<div class="container 50%">
 					<form action="#" method="post">
 						<div class="row uniform">
 							<div class="6u 12u$(small)">
-								<input name="name" id="name" value="" placeholder="稱呼" type="text">
+								<input name="name" id="name" value="" placeholder="Name" type="text">
 							</div>
 							<div class="6u$ 12u$(small)">
-								<input name="email" id="email" value="" placeholder="電子信箱" type="email">
+								<input name="email" id="email" value="" placeholder="Email" type="email">
 							</div>
 							<div class="12u$">
-								<textarea name="message" id="message" placeholder="內容" rows="6"></textarea>
+								<textarea name="message" id="message" placeholder="Comments and Suggestion" rows="6"></textarea>
 							</div>
 							<div class="12u$">
 								<ul class="actions">
-									<li><input value="確定傳送" class="special big" type="submit"></li>
+									<li><input value="SEND" class="special big" type="submit"></li>
 								</ul>
 							</div>
 						</div>
