ADD japanese version

--- a/FinalDemo/網頁/index_japan.html
+++ b/FinalDemo/網頁/index_japan.html
@@ -7,7 +7,7 @@
 <html lang="zh-Hans-TW ">
 	<head>
 		<meta charset="UTF-8">
-		<title>超級天天天賭場</title>
+		<title>毎日スーパーカジノ</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -26,27 +26,27 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">CASINO</a></h1>
+				<h1><a href="index.html">カジノ</a></h1>
 				<nav id="nav">
 					<ul>
-                        <li><a href="index_japan.html">Japanese Homepage  </a></li>
+                        <li><a href="index_japan.html">日本語首頁  </a></li>
                         <li><a href="index_english.html">English Home Page  </a></li>
-						<li><a href="index.html">Chinese Home Page</a></li>
-						<li><a href="introduction.html">How to Play</a></li>
-						<li><a href="CardGame.html">Compare_cards_point</a></li>
-						<li><a href="SlotMachine.html">Slot</a></li>
-						<li><a href="#" class="button special">Enroll</a></li>
+						<li><a href="index.html">中國語ホームページ</a></li>
+						<li><a href="introduction.html">どのように始めるために</a></li>
+						<li><a href="CardGame.html">サイズより</a></li>
+						<li><a href="SlotMachine.html">スロットマシン</a></li>
+						<li><a href="#" class="button special">登録</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Super Sky Casino</h2>
-				<p>Welcome To Ethernet Smart Contract Casino</p>
+				<h2>毎日スーパーカジノ</h2>
+				<p>インテリジェントイーサネット通貨へようこそは、カジノを収縮します</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">How To Start Your Game</a>
+						<a href="#" class="button big">どのように始めるために</a>
 					</li>
 				</ul>
 			</section>
@@ -56,29 +56,29 @@
 			<section id="one" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>About this Website</h2>
-						<p>Look For Details for our developer and smart contracts</p>
+						<h2>このサイトについて</h2>
+						<p>私たちの情報やゲームのルールを参照してください。</p>
 					</header>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color1 fa-info-circle"></i>
-								<h3>About Developer</h3>
-								<p>Look for details about developer and reference for smart contracts</p>
+								<h3>私たちについて</h3>
+								<p>私たちの情報とインテリジェンスを得契約及びその他の関連情報の詳細をご覧ください。</p>
 							</section>
 						</div>
 						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color9 fa-dollar (alias)"></i>
-								<h3>SLOT GAME</h3>
-								<p>Slot makes your life better</p>
+								<h3>スロットマシン</h3>
+								<p>冒険を刺激するあなたの生活の中で意思決定を引き出し、あなたの最新のスリル経験を与えます！</p>
 							</section>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color6 fa-university "></i>
-								<h3>COMPARE CARDS POINT</h3>
-								<p>Want to be a Billionaire? Tra and Make A Wish</p>
+								<h3>サイズより</h3>
+								<p>受賞1/2である！あなたを待っ運命の機会、あなたが金持ちにしたいですか？右に私を選んでください！</p>
 							</section>
 						</div>
 					</div>
@@ -89,41 +89,41 @@
 			<section id="two" class="wrapper style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>About Developer</h2>
-						<p>Belows are project assignments</p>
+						<h2>デベロッパーについて</h2>
+						<p>次のシステムの開発者であり、および割り当て</p>
 					</header>
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
 								<img src="images/profile/placeholder.gif" alt="" />
 								<h4>賴晨禾</h4>
-								<p>Progect Manager</p>
+								<p>プロジェクトマネージャ</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/邱天.jpg" alt="" />
 								<h4>邱天</h4>
-								<p>Website Developer</p>
+								<p>Web制作部門</p>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
 								<img src="images/profile/陳逸夫.jpg" alt="" />
 								<h4>陳逸夫</h4>
-								<p>Graphical Interface Developer</p>
+								<p>グラフィカルインタフェースの設計</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/彭麒家.jpg" alt="" />
 								<h4>彭麒家</h4>
-								<p>Grapgical Interface Developer</p>
+								<p>グラフィカルインタフェースの設計</p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
 								<img src="images/profile/鄭敬儒.jpg" alt="" />
 								<h4>鄭敬儒</h4>
-								<p>Smart Contract Developer</p>
+								<p>スマート契約</p>
 							</section>
 
 						</div>
 					</section>
 					<footer>
-						<p>Look For Our Github<br>all of our codes are saved there</p>
+						<p>私たちをgithubをチェックしてください<br>我々は開発コードに関するすべてがそれであります</p>
 						<ul class="actions">
 							<li>
 								<a href="https://github.com/NCCU-Software-Engineering/Software-Engineering" target="_blank" class="button big">github</a>
@@ -137,25 +137,25 @@
 			<section id="three" class="wrapper style3 special">
 				<div class="container">
 					<header class="major">
-						<h2>reply your comments</h2>
-						<p>if you have any recommendation on our project</p>
+                        <h2>質問やコメントへ戻ります </h2>
+						<p>あなたは、問題をこのサイト上の任意のコメントを持っているか、見BUGつけた場合</p>
 					</header>
 				</div>
 				<div class="container 50%">
 					<form action="#" method="post">
 						<div class="row uniform">
 							<div class="6u 12u$(small)">
-								<input name="name" id="name" value="" placeholder="Name" type="text">
+								<input name="name" id="name" value="" placeholder="コール" type="text">
 							</div>
 							<div class="6u$ 12u$(small)">
-								<input name="email" id="email" value="" placeholder="Email" type="email">
+								<input name="email" id="email" value="" placeholder="電子メールボッス"type="email">
 							</div>
 							<div class="12u$">
-								<textarea name="message" id="message" placeholder="Comments and Suggestion" rows="6"></textarea>
+								<textarea name="message" id="情報" placeholder="コンテンツ" rows="6"></textarea>
 							</div>
 							<div class="12u$">
 								<ul class="actions">
-									<li><input value="SEND" class="special big" type="submit"></li>
+									<li><input value="決定転送" class="special big" type="submit"></li>
 								</ul>
 							</div>
 						</div>
