--- a/FinalDemo/網頁/CardGame.html
+++ b/FinalDemo/網頁/CardGame.html
@@ -29,6 +29,7 @@
 				<h1><a href="index.html">賭場</a></h1>
 				<nav id="nav">
 					<ul>
+                        <li><a href="index_japan.html">日本語首頁  </a></li>
                         <li><a href="index_english.html">English Home Page  </a></li>
 						<li><a href="index.html">首頁</a></li>
 						<li><a href="introduction.html">如何開始</a></li>
