調整拉霸位置

--- a/FinalDemo/express/public/SlotMachine.html
+++ b/FinalDemo/express/public/SlotMachine.html
@@ -44,7 +44,7 @@
 			</header>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
+			<section id="main" class="wrapper" style="top:400px;left:50%;position:absolute;">
 		
 				<p class="header"><span>Unity WebGL Player | </span>SlotMachine</p>
 				<div class="template-wrap clear">
@@ -70,7 +70,7 @@
 			
 			</section>
 
-		<!-- Footer -->
+		<!-- Footer 
 			<footer id="footer">
 				<div class="container">
 					<section class="links">
@@ -144,6 +144,6 @@
 					</div>
 				</div>
 			</footer>
-
+			-->
 	</body>
 </html>
