修改數字顏色

--- a/FinalDemo/express/public/CardGame.html
+++ b/FinalDemo/express/public/CardGame.html
@@ -77,9 +77,9 @@
 				<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="win" src="images/game1/win.png"/></div>
 				<div style="top:258px;left:505px;position:absolute;visibility:hidden;"><img id="lose" src="images/game1/lose.png"/></div>		
 
-				<FONT SIZE="7"><div style="top:490px;left:900px;position:absolute;" id = "bankerMoney"><style="font-family:cursive;"></div></FONT>
-				<FONT SIZE="7"><div style="top:535px;left:900px;position:absolute;" id = "yourMoney"><style="font-family:cursive;"></div></FONT>
-				<FONT SIZE="7"><div style="top:580px;left:900px;position:absolute;" id = "bet"><style="font-family:cursive;"></div></FONT>
+				<FONT SIZE="7" color="white"><div style="top:490px;left:900px;position:absolute;" id = "bankerMoney"><style="font-family:cursive;"></div></FONT>
+				<FONT SIZE="7" color="white"><div style="top:535px;left:900px;position:absolute;" id = "yourMoney"><style="font-family:cursive;"></div></FONT>
+				<FONT SIZE="7" color="white"><div style="top:580px;left:900px;position:absolute;" id = "bet"><style="font-family:cursive;"></div></FONT>
 				
 				<script language="JavaScript" src = "js/CardGame_b.js"></script>
 				<script language="JavaScript" src = "js/node_modules/web3/dist/web3.js"></script>
