--- a/FinalDemo/express/public/CardGame.html
+++ b/FinalDemo/express/public/CardGame.html
@@ -43,7 +43,7 @@
 
 		<!-- Main -->
 		
-			<section style="top:150px;left:20%;position:absolute;">
+			<section style="top:150px;left:20px;position:absolute;">
 				
 				<!--<embed src="music\Bumper_Tag.mp3" autostart=true hidden=true>-->
 				
