修改拉霸圖片

--- a/FinalDemo/express/public/index.html
+++ b/FinalDemo/express/public/index.html
@@ -47,7 +47,7 @@
 				<p>歡迎來到乙太幣智能合約賭場</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">如何開始</a>
+						<a href="introduction.html" class="button big">如何開始</a>
 					</li>
 				</ul>
 			</section>
@@ -96,8 +96,8 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile/賴晨禾.jpg" alt="" />
-								<h4>賴晨禾</h4>
+								<img src="images/profile/賴晨和.jpg" alt="" />
+								<h4>賴晨和</h4>
 								<p>PM</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
