--- a/FinalDemo/express/public/index_japan.html
+++ b/FinalDemo/express/public/index_japan.html
@@ -95,8 +95,8 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/profile/placeholder.gif" alt="" />
-								<h4>賴晨禾</h4>
+								<img src="images/profile/賴晨和.jpg" alt="" />
+								<h4>賴晨和</h4>
 								<p>プロジェクトマネージャ</p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
